--- a/source/_sass/styles.scss
+++ b/source/_sass/styles.scss
@@ -9,5 +9,23 @@ $medium: screen and (min-width: 40em);
 $medium-only: screen and (min-width: 40em) and (max-width: 63.9375em);
 $large: screen and (min-width: 64em);
 
+// Colors
+$blue: #008bb9;
+$dark-blue: #12375C;
+$light-gray: #EBEBEB;
+$medium-gray: #E3E3E3;
+$font-drak-gray: #222222;
+$main-dark-gray: #999;
+$primary-green: #54C569;
+$light-green-tint: #D9F2DE;
+$dark-green-tint: #C9E8CF;
+$primary-orange: #FBAE39;
+$light-orange-tint: #FDF7EB;
+$dark-orange-tint: #FFECCB;
+$hyperlink-orange: #F77C50;
+
 @import 'breakpoint';
 @import 'base';
+@import 'top-bar';
+@import 'index';
+@import 'table';
