--- a/source/_includes/copyright.html
+++ b/source/_includes/copyright.html
@@ -1,8 +1,34 @@
 <div class="copyright">
-  <div class="row">
-    <div class="large-10 large-centered columns">
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="copyright__cc-badge" alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
-      This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
+  <div class="row expanded">
+    <div class="column small-12 medium-12 large-9">
+      <p><span class="copyrights">Copyright 2018 Results for America. All rights reserved.</span> <span class="privacy"><a href="http://results4america.org/privacy-policy/">Privacy Policy</a></span></p>
+    </div>
+    <div class="column small-12 medium-12 large-3 social-links-container">
+      <div class="social-links">
+        <ul>
+          <li class="twitter">
+            <a href="https://twitter.com/results4america" target=
+            "_blank"><i aria-hidden="true" class="fa fa-twitter"></i></a>
+          </li>
+          <li class="facebook">
+            <a href="https://www.facebook.com/Results4America.org/" target=
+            "_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a>
+          </li>
+          <li class="instagram">
+            <a href="https://www.instagram.com/results4america/" target=
+            "_blank"><i aria-hidden="true" class="fa fa-instagram"></i></a>
+          </li>
+          <li class="medium">
+            <a href="https://medium.com/@Results4America" target=
+            "_blank"><i aria-hidden="true" class="fa fa-medium"></i></a>
+          </li>
+          <li class="youtube-play">
+            <a href="https://www.youtube.com/channel/UCCDgyIwYSdDGL1L0GNjcjWA"
+            target="_blank"><i aria-hidden="true" class=
+            "fa fa-youtube-play"></i></a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
