--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -24,8 +24,8 @@
 
     {{content}}
 
-    <!-- {% include footer.html %}
-    {% include copyright.html %} -->
+    {% include footer.html %}
+    {% include copyright.html %}
 
     <div id="overlay" class="js-overlay"></div>
     <script src="{{'/vendor/jquery-2.1.4.min.js' | relative_url}}"></script>
