--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -18,20 +18,71 @@ body {
   }
 }
 
-.footer {
-  h2 {
-    margin: 1em 0;
+footer {
+  padding: 3rem;
+  text-align: center;
+  vertical-align: middle;
+  .logo {
+    height: 4.5rem;
+    width: auto;
   }
-  padding-top: 40px;
-  &__nav {
-    > a {
-      text-align: left;
-      display: block;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-      padding: 5px;
-      &:hover {
-        text-decoration: none;
-        background-color: rgba(0, 0, 0, 0.1);
+}
+
+.copyright {
+  padding: 2rem 4rem;
+  font-weight: 400;
+  p {
+    padding: 0;
+    font-size: 0.9rem;
+  }
+  background-color: $light-gray;
+  a {
+    color: $main-dark-gray;
+    text-decoration: none;
+    &:hover {
+      color: $blue;
+      @extend .u-transition;
+    }
+  }
+  .copyrights {
+    display: block;
+    @include breakpoint($medium) {
+      display: inline-block;
+    }
+  }
+  .privacy {
+    display: block;
+    @include breakpoint($medium) {
+      display: inline-block;
+    }
+    &:before {
+      content: '|';
+      padding: 0 1rem;
+      display: none;
+      @include breakpoint($medium) {
+        display: inline-block;
+      }
+    }
+  }
+  .social-links-container {
+    @include breakpoint($large) {
+      text-align: right;
+    }
+  }
+  .social-links {
+    display: block;
+    @include breakpoint($medium) {
+      display: inline-block;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+
+      li {
+        font-size: 1.1rem;
+        padding: 0 0.5rem;
+        display: inline-block;
       }
     }
   }
