Clean up styles and add download button

--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -4,6 +4,9 @@ body {
     font-size: 1.2rem;
     padding-top: 20px;
     padding-bottom: 20px;
+    @include breakpoint($small-only) {
+      font-size: 1rem;
+    }
     a {
       color: $hyperlink-orange;
       text-decoration: none;
