--- a/source/_sass/styles.scss
+++ b/source/_sass/styles.scss
@@ -27,9 +27,10 @@ $hyperlink-orange: #f77c50;
 @import 'breakpoint';
 @import 'base';
 @import 'top-bar';
-@import 'index';
+@import 'top-section';
 @import 'table';
 @import 'criteria';
+@import 'index';
 
 .u-transition {
   transition: all 0.4s ease;
