--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -6,7 +6,7 @@ layout: default
 {% assign leadingEffort = page.leading_list %}
 {% assign promisingEfforts = page.promising_list | where: 'year', criteriaYear %}
 
-<main role="main" id="criteria">
+<main role="main" class="criteria">
 
   <section class="top-section">
     <div class="row align-center">
