--- a/source/_sass/_criteria.scss
+++ b/source/_sass/_criteria.scss
@@ -1,4 +1,4 @@
-#criteria {
+.criteria {
   .section__explanation {
     text-align: inherit;
   }
@@ -14,7 +14,19 @@
       text-transform: capitalize;
       font-weight: 500;
       margin: 1rem 0;
+      &--leading {
+        margin: 1rem 0;
+        text-align: center;
+        font-weight: 500;
+        text-transform: none;
+        font-size: 2rem;
+        line-height: 1.2;
+        @include breakpoint($small-only) {
+          font-size: 1.8rem;
+        }
+      }
     }
+
     .effort__abbreviation {
       font-weight: 800;
       font-size: 2.4rem;
