Add criteria anchors

--- a/source/_includes/effort.html
+++ b/source/_includes/effort.html
@@ -1,5 +1,9 @@
 {% assign effort = include.effort %}
 
+{%if include.criteriaName%}
+<a name={{include.criteriaName | slugify}}></a>
+{%endif%}
+
 {%if effort.state%}
 <a name={{effort.state | slugify}}></a>
 {%endif%}
