--- a/source/_sass/_table.scss
+++ b/source/_sass/_table.scss
@@ -1,4 +1,5 @@
 table {
+  width: 100%;
   th {
     background-color: $dark-blue;
     font-size: 1.5rem;
@@ -8,8 +9,8 @@ table {
       padding: 15px;
     }
     @include breakpoint($small-only) {
-      font-size: .8rem;
-      padding: 10px;
+      font-size: .7rem;
+      padding: 5px 10px;
     }
     &:nth-child(2) {
       background-color: lighten($dark-blue, 3);
@@ -46,12 +47,77 @@ table {
     font-weight: 500;
     line-height: 1.2;
     padding: 50px 40px 0 35px;
+    &:hover {
+      color: $blue;
+      cursor: pointer;
+      @extend .u-transition;
+    }
+    a {
+      text-decoration: none;
+      &:hover {
+        color: $blue;
+        @extend .u-transition;
+      }
+    }
     @include breakpoint($medium-only) {
-      padding: 25px 15px 0 15px;
+      font-size: 1.2rem;
+      padding: 25px 15px 20px 15px;
     }
     @include breakpoint($small-only) {
-      font-size: 1rem;
+      font-size: .9rem;
       padding: 25px 15px 0 15px;
+    }
+  }
+
+  .title-leading {
+    width: 38%;
+    &--desktop {
+      background-color: lighten($dark-blue, 3);
+      @include breakpoint($medium-only) {
+        display: none;
+      }
+      @include breakpoint($small-only) {
+        display: none;
+      }
+    }
+    &--mobile {
+      a {
+        &:hover {
+          color: $blue;
+          text-decoration: none;
+          @extend .u-transition;
+        }
+      }
+      @include breakpoint($large) {
+        display: none;
+      }
+    }
+  }
+
+  .title-promising {
+    width: 38%;
+    @include breakpoint($small-only) {
+      width: 40%;
+    }
+  }
+
+  .launch-leading {
+    vertical-align: middle;
+    @include breakpoint($medium-only) {
+      font-size: 1.2rem;
+      margin-top: -2px;
+      padding-left: 5px;
+
+    }
+    @include breakpoint($small-only) {
+      font-size: .75rem;
+      margin-top: -2px;
+      padding-left: 2px;
+    }
+    &--title {
+      @include breakpoint($large) {
+        display: none;
+      }
     }
   }
 
@@ -59,9 +125,27 @@ table {
     padding: 50px 0 20px 35px;
     @include breakpoint($medium-only) {
       padding-top: 25px;
+      padding-left: 0;
     }
     @include breakpoint($small-only) {
       padding-top: 25px;
+      padding-left: 0;
+    }
+    &--mobile {
+      &:hover {
+        cursor: pointer;
+      }
+      @include breakpoint($large) {
+        display: none;
+      }
+    }
+    &--desktop {
+      @include breakpoint($medium-only) {
+        display: none;
+      }
+      @include breakpoint($small-only) {
+        display: none;
+      }
     }
     &__state {
       color: $primary-green;
@@ -69,6 +153,7 @@ table {
       font-weight: bold;
       line-height: 1;
       @include breakpoint($medium-only) {
+        text-align: center;
 
       }
       @include breakpoint($small-only) {
@@ -106,10 +191,10 @@ table {
   .promising {
     padding: 50px 0 0 35px;
     @include breakpoint($medium-only) {
-      padding: 25px 0 0 15px;
+      padding: 25px 0 20px 15px;
     }
     @include breakpoint($small-only) {
-      padding: 25px 0 0 15px;
+      padding: 25px 0 20px 15px;
     }
     &__state {
       background-color: $primary-orange;
