Add social media bar

--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -6,8 +6,19 @@
 
 <div class="media-icons">
   <div class="row align-right expanded">
-    <div class="column large-3">
-      Share: FB | TW | MAIL
+    <div class="column large-3 social-media-toolbar">
+        <span>Share</span>
+        <ul>
+          <li class="social-media-link facebook">
+            <a href="#" alt="" class="" target="_blank"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li class="social-media-link twitter">
+            <a href="#" alt="" class="" target="_blank"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li class="social-media-link email">
+            <a href="#" alt="E-mail: example@example.com" class="" target="_blank"><i class="fa fa-envelope"></i></a>
+          </li>
+        </ul>
     </div>
   </div>
 </div>
