Style horizontal rules

--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -44,7 +44,7 @@ layout: default
 
   <section class="section section__leading-list">
     <div class="row align-center">
-      <div class="column large-8 medium-8 small-12">
+      <div class="column large-10">
         <hr class="hr--long">
       </div>
     </div>
