--- a/source/_sass/_criteria.scss
+++ b/source/_sass/_criteria.scss
@@ -54,4 +54,12 @@
   .section__promising-list {
     @include effort($primary-orange);
   }
+  hr.hr--long {
+    // margin: 15px auto;
+    width: 100%;
+    height: 3px;
+    background-color: $medium-gray;
+    border-radius: 5px;
+    border: none;
+  }
 }
