--- a/source/_sass/styles.scss
+++ b/source/_sass/styles.scss
@@ -14,7 +14,7 @@ $blue: #008bb9;
 $dark-blue: #12375c;
 $light-gray: #ebebeb;
 $medium-gray: #e3e3e3;
-$font-drak-gray: #222222;
+$font-dark-gray: #222222;
 $main-dark-gray: #999;
 $primary-green: #54c569;
 $light-green-tint: #d9f2de;
