--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -1,9 +1,12 @@
 body {
+  font-family: stevie-sans, sans-serif;
   p {
     color: $main-dark-gray;
+    font-family: stevie-sans, sans-serif;
     font-size: 1.2rem;
     padding-top: 20px;
     padding-bottom: 20px;
+
     @include breakpoint($small-only) {
       font-size: 1rem;
     }
@@ -15,6 +18,9 @@ body {
         @extend .u-transition;
       }
     }
+  }
+  table {
+    font-family: stevie-sans, sans-serif;
   }
 }
 
