Top section padding on large

--- a/source/_sass/_top-section.scss
+++ b/source/_sass/_top-section.scss
@@ -1,5 +1,8 @@
 .top-section {
   background-color: white;
+  @include breakpoint($large) {
+    padding-top: 10px;
+  }
   h1 {
     color: $blue;
     font-size: 2.3rem;
