Edit criteria page
Add description and explanation

Open markdown rendered links in new windows

Add tests

Edit index button

--- a/source/_includes/effort.html
+++ b/source/_includes/effort.html
@@ -30,7 +30,7 @@
   </div>
 </div>
 <div class="row align-center">
-  <div class="column large-10">
+  <div class="column large-10 markdown">
     {% if effort.long_description %}
     {{ effort.long_description | markdownify }}
     {% endif %}
