--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -21,6 +21,15 @@ layout: default
     </div>
   </section>
 
+  <section class="section section__description">
+    <div class="row align-center">
+      <div class="column large-10">
+        {{ page.description | markdownify }}
+      </div>
+    </div>
+  </section>
+
+
   <section class="section section__explanation">
     <div class="row align-center">
       <div class="column large-10">
