--- a/source/_sass/_criteria.scss
+++ b/source/_sass/_criteria.scss
@@ -1,4 +1,7 @@
 .criteria {
+  .section__description {
+    font-weight: 600 !important;
+  }
   .section__explanation {
     text-align: inherit;
   }
