Add credits and scale email icon

--- a/source/_includes/copyright.html
+++ b/source/_includes/copyright.html
@@ -30,5 +30,9 @@
         </ul>
       </div>
     </div>
+    <div class="column small-12 medium-12 large-9">
+      <p class="credits">Site by <a href="https://objectively.is/" target=
+      "_blank">Objectively</a></p>
+    </div>
   </div>
 </div>
