Fix type position and launch icon margin on screen change

--- a/source/_sass/styles.scss
+++ b/source/_sass/styles.scss
@@ -8,6 +8,7 @@ $touch: screen and (max-width: 64em);
 $medium: screen and (min-width: 40em);
 $medium-only: screen and (min-width: 40em) and (max-width: 63.9375em);
 $large: screen and (min-width: 64em);
+$between-large: screen and (min-width: 1025px) and (max-width: 1267px);
 
 // Colors
 $blue: #008bb9;
