--- a/source/_sass/_table.scss
+++ b/source/_sass/_table.scss
@@ -104,21 +104,31 @@ table {
     }
   }
 
+  .leading-icon-space {
+    @include breakpoint($medium-only) {
+      padding-left: 5px;
+    }
+    @include breakpoint($small-only) {
+      padding-left: 2px;
+    }
+    @include breakpoint($large) {
+      padding-left: 5px;
+
+    }
+  }
+
   .launch-leading {
     vertical-align: middle;
     @include breakpoint($medium-only) {
       font-size: 1.2rem;
       margin-top: -4px;
-      padding-left: 5px;
     }
     @include breakpoint($small-only) {
       font-size: .75rem;
       margin-top: -2px;
-      padding-left: 2px;
     }
     @include breakpoint($large) {
       margin-top: -3px;
-      padding-left: 5px;
     }
   }
 
@@ -176,6 +186,11 @@ table {
         top: 8px;
         @include breakpoint($small-only) {
           top: 5px;
+        }
+        &--desktop {
+          @include breakpoint($between-large) {
+            right: 0px;
+          }
         }
       }
     }
