--- a/source/_sass/_top-section.scss
+++ b/source/_sass/_top-section.scss
@@ -37,13 +37,20 @@
   p {
     color: $main-dark-gray;
     font-size: 1.2rem;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    text-align: left;
     @include breakpoint($small-only) {
       font-size: 1rem;
     }
   }
   .index-year {
     font-size: 2.3rem;
+  }
+  .long-description {
+    p {
+      margin-top: 0;
+      padding-top: 0;
+    }
   }
 }
